# Mike-depth-footstep-planner

./: LICENSE  README.md
depth_footstep_planner/: CMakeLists.txt  package.xml
depth_footstep_planner/config/: footstep_config.rviz  footstep_config2.rviz  planning_params.yaml  planning_params_asimo.yaml
depth_footstep_planner/include/depth_footstep_planner/: Footstep.h  FootstepPlanner.h  FootstepPlannerEnvironment.h  FootstepPlannerNode.h  Heuristic.h  PathCostHeuristic.h  PlanningState.h  PlanningStateChangeQuery.h  State.h  helper.h
depth_footstep_planner/include/sbpl_edit/: Depth2Dgridsearch.h
depth_footstep_planner/launch/: footstep_planner_complete.launch
depth_footstep_planner/model/models/: models.txt
depth_footstep_planner/scripts/: DepthmapFootstepSegmentationNode.py
depth_footstep_planner/scripts/Map_Segmantaion/: Custum_UNET.py
depth_footstep_planner/src/: Footstep.cpp  FootstepPlanner.cpp  FootstepPlannerEnvironment.cpp  FootstepPlannerNode.cpp  Heuristic.cpp  PathCostHeuristic.cpp  PlanningState.cpp  PlanningStateChangeQuery.cpp  State.cpp  footstep_planner.cpp  helper.cpp  test.cpp
depth_footstep_planner/src/sbpl_edit/: Depth2Dgridsearch mod.cpp  Depth2Dgridsearch orig.cpp  Depth2Dgridsearch.cpp
depthmap_humanoid_msgs/: CMakeLists.txt  package.xml
depthmap_humanoid_msgs/include/depthmap_humanoid_msgs/: MapServer.h  depthmap2d.h
depthmap_humanoid_msgs/map_test/: test.yaml
depthmap_humanoid_msgs/msg/: DepthMap.msg  GreyScaleMap16bit.msg
depthmap_humanoid_msgs/src/: MapServer.cpp  depthmap2d.cpp  map_server.cpp
depthmap_humanoid_msgs/srv/: GetDepthMap.srv  GetGreyScaleMap16bitMap.srv
